--- a/prices.html
+++ b/prices.html
@@ -95,28 +95,28 @@
 
     <div class="container">
         <div class="row text-center">
-            <div class="col">
+            <div class="col-sm">
                 <a href="#" class="btn"><img src="image/3.png" alt="..."></a>
                 <p class="service">Inside cabinets</p>
                 <p class="service-time">30 minutes</p>
             </div>
-            <div class="col">
+            <div class="col-sm">
                 <a href="#" class="btn"><img src="image/5.png" alt="..."></a>
                 <p class="service">Inside fridge</p>
                 <p class="service-time">30 minutes</p>
             </div>
-            <div class="col">
+            <div class="col-sm">
 
                 <a href="#" class="btn"><img src="image/4.png" alt="..."></a>
                 <p class="service">Inside oven</p>
                 <p class="service-time">30 minutes</p>
             </div>
-            <div class="col">
+            <div class="col-sm">
                 <a href="#" class="btn"><img src="image/2.png" alt="..."></a>
                 <p class="service">Laundry wash & dry</p>
                 <p class="service-time">30 minutes</p>
             </div>
-            <div class="col">
+            <div class="col-sm">
 
                 <a href="#" class="btn"><img src="image/1.png" alt="..."></a>
                 <p class="service">Interior windows</p>
